UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Special_Routing_S__c.field-meta.xml
<CustomField>
    <fullName>Special_Routing_S__c</fullName>
    <label>Special Routing SECLOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A = Cable Only</fullName>
            </value>
            <value>
                <fullName>B = Diversity</fullName>
            </value>
            <value>
                <fullName>C = Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>D = Route other than normal</fullName>
            </value>
            <value>
                <fullName>E = Self Healing Loop</fullName>
            </value>
            <value>
                <fullName>F = Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>G = Self Healing Loop via Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>H = Self Healing Wire Center</fullName>
            </value>
            <value>
                <fullName>J = Self Healing Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>K = Special Routing at SECLOC</fullName>
            </value>
            <value>
                <fullName>N = N/A</fullName>
            </value>
            <value>
                <fullName>4 =  Self Healing Interoffice Facilities</fullName>
            </value>
            <value>
                <fullName>5 = Special Routing for Interoffice Facilities</fullName>
            </value>
            <value>
                <fullName>6 = Route other than normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>