UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Splice_Count_Splice_Locations__c.field-meta.xml
<CustomField>
    <fullName>Splice_Count_Splice_Locations__c</fullName>
    <label>Splice Count - Splice Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>