UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Splicing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Splicing_Cost__c</fullName>
    <label>Splicing Cost</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>