UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/SPOF__c.field-meta.xml
<CustomField>
    <fullName>SPOF__c</fullName>
    <label>SPOF</label>
    <length>1</length>
    <type>Text</type>
</CustomField>