UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <label>Street Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>