UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/SWC_CLLI__c.field-meta.xml
<CustomField>
    <fullName>SWC_CLLI__c</fullName>
    <label>SWC CLLI: BSA</label>
    <length>25</length>
    <type>Text</type>
</CustomField>