UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Term_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Term_Agreement__c</fullName>
    <label>Term Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>