UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Total_New_Fiber_OSP_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Fiber_OSP_Costs__c</fullName>
    <label>Total New Fiber OSP Costs</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>