UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/TR_Costs_1G_below__c.field-meta.xml
<CustomField>
    <fullName>TR_Costs_1G_below__c</fullName>
    <label>TR Costs 1G &amp; below</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>