UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/UMTS_MTSO__c.field-meta.xml
<CustomField>
    <fullName>UMTS_MTSO__c</fullName>
    <label>UMTS MTSO</label>
    <length>11</length>
    <type>Text</type>
</CustomField>