UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/UNI_NNI_Type__c.field-meta.xml
<CustomField>
    <fullName>UNI_NNI_Type__c</fullName>
    <label>UNI/NNI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>