UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Unit Number of DPI service address</description>
    <label>Unit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>