UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/VFO_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>VFO_Record_Id__c</fullName>
    <label>VFO Record Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>