UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Wire_Center__c.field-meta.xml
<CustomField>
    <fullName>Wire_Center__c</fullName>
    <label>Wire Center</label>
    <length>6</length>
    <type>Text</type>
</CustomField>