UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/WireCenter_CLLI__c.field-meta.xml
<CustomField>
    <fullName>WireCenter_CLLI__c</fullName>
    <label>WireCenter CLLI: DSAT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>