UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/WireCenter_Speed__c.field-meta.xml
<CustomField>
    <fullName>WireCenter_Speed__c</fullName>
    <label>WireCenter Speed (Legacy)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>